2000-09-26  Havoc Pennington  <hp@redhat.com>

	* gdk-pixbuf-util.c (gdk_pixbuf_saturate_and_pixelate): Add this
	function here, instead of putting it in a private GTK+ file.

	* gdk-pixbuf-private.h (GdkPixbufInlineFormat): include an 
	enum here for the known formats of inlined pixbufs.
	Also, #define our file magic here.

2000-06-23  Havoc Pennington  <hp@redhat.com>

	* make-inline-pixbuf.c: Small program that creates C variable
	declarations of inline pixbuf data. This can be read 
	by gdk_pixbuf_new_from_inline.

	* gdk-pixbuf.h (gdk_pixbuf_new_from_inline): New function to read
	inline pixbuf data and create a pixbuf from it.	

	* gdk-pixbuf-data.c (gdk_pixbuf_new_from_inline): implement here

2000-09-07  Tor Lillqvist  <tml@iki.fi>

	* makefile.mingw.in: Use own version number for gdk-pixbuf DLLs,
	like on Unix.

2000-08-12  Tor Lillqvist  <tml@iki.fi>

	* gdk_pixbuf.def: Add missing entry point.

2000-08-10  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (EXTRA_DIST): The *.def files had the wrong names
	(s/pixbuf_/pixbufloader_)
	
2000-08-02  Tor Lillqvist  <tml@iki.fi>

	* io-bmp.c
	* io-ico.c
	* io-ras.c
	* io-tiff.c
	* io-wbmp.c: Conditionalise inclusion of <unistd.h>.

	* makefile.mingw.in: List loaders alphabetically. Add the wbmp
	one. Fix names of DLLs to have '-' instead of '_'.

2000-07-31  Elliot Lee  <sopwith@redhat.com>
	* io-wbmp.c: Some bug fixes - now tested to work.

2000-07-27  Elliot Lee  <sopwith@redhat.com>

	* gdk-pixbuf-io.h, gdk-pixbuf-io.c: Add gdk_pixbuf_get_named_module() function to facilitate above change
	* io-wbmp.c, pixbufloader_wbmp.defs, gdk-pixbuf-io.c, Makefile: Implement loader for WBMP format.
	* io-bmp.c: Don't malloc a temporary buffer - use stack instead.

2000-07-23  Tor Lillqvist  <tml@iki.fi>

	Win32 build setup:
	
	* makefile.mingw.in
	* pixops/makefile.mingw.in
	* pixbuf_*.def: New files.

	* Makefile.am
	* pixops/Makefile.am: Add them. Add rule to generate makefile.mingw.
